--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@
 # misc
 .DS_Store
 
-
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -34,3 +33,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local env
+.env
+
+nextjs-mysql
