--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "4.16.2",
+    "@prisma/client": "^5.7.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -15,7 +15,7 @@
   "devDependencies": {
     "autoprefixer": "10.4.2",
     "postcss": "8.4.31",
-    "prisma": "4.16.2",
+    "prisma": "^5.7.1",
     "tailwindcss": "3.0.23"
   }
 }
